--- a/HACCP.csproj
+++ b/HACCP.csproj
@@ -68,6 +68,10 @@
     <Reference Include="DevExtreme.AspNet.Data, Version=2.6.1.0, Culture=neutral, PublicKeyToken=982f5dab1439d0f7, processorArchitecture=MSIL">
       <HintPath>packages\DevExtreme.AspNet.Data.2.6.1\lib\net452\DevExtreme.AspNet.Data.dll</HintPath>
     </Reference>
+    <Reference Include="DevExtreme.AspNet.Mvc, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <HintPath>packages\DevExtreme.AspNet.Mvc.20.1.3\lib\net452\DevExtreme.AspNet.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="DevExpress.Charts.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <HintPath>packages\DevExpress.Charts.Core.20.1.3\lib\net452\DevExpress.Charts.v20.1.Core.dll</HintPath>
     </Reference>
@@ -182,10 +186,6 @@
     </Reference>
     <Reference Include="DevExpress.XtraScheduler.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <HintPath>packages\DevExpress.Scheduler.Core.20.1.3\lib\net452\DevExpress.XtraScheduler.v20.1.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="DevExtreme.AspNet.Mvc, Version=22.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\DevExtreme\DevExtreme.AspNet.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
@@ -3711,47 +3711,6 @@
     <Content Include="Content\css\devextreme\dx.softblue.css" />
     <Content Include="Content\css\Site.css" />
     <Content Include="Content\css\vendor.css" />
-    <Content Include="Content\dx-diagram.css" />
-    <Content Include="Content\dx-diagram.min.css" />
-    <Content Include="Content\dx-gantt.css" />
-    <Content Include="Content\dx-gantt.min.css" />
-    <Content Include="Content\dx.carmine.compact.css" />
-    <Content Include="Content\dx.carmine.css" />
-    <Content Include="Content\dx.common.css" />
-    <Content Include="Content\dx.contrast.compact.css" />
-    <Content Include="Content\dx.contrast.css" />
-    <Content Include="Content\dx.dark.compact.css" />
-    <Content Include="Content\dx.dark.css" />
-    <Content Include="Content\dx.darkmoon.compact.css" />
-    <Content Include="Content\dx.darkmoon.css" />
-    <Content Include="Content\dx.darkviolet.compact.css" />
-    <Content Include="Content\dx.darkviolet.css" />
-    <Content Include="Content\dx.greenmist.compact.css" />
-    <Content Include="Content\dx.greenmist.css" />
-    <Content Include="Content\dx.light.compact.css" />
-    <Content Include="Content\dx.light.css" />
-    <Content Include="Content\dx.material.blue.dark.compact.css" />
-    <Content Include="Content\dx.material.blue.dark.css" />
-    <Content Include="Content\dx.material.blue.light.compact.css" />
-    <Content Include="Content\dx.material.blue.light.css" />
-    <Content Include="Content\dx.material.lime.dark.compact.css" />
-    <Content Include="Content\dx.material.lime.dark.css" />
-    <Content Include="Content\dx.material.lime.light.compact.css" />
-    <Content Include="Content\dx.material.lime.light.css" />
-    <Content Include="Content\dx.material.orange.dark.compact.css" />
-    <Content Include="Content\dx.material.orange.dark.css" />
-    <Content Include="Content\dx.material.orange.light.compact.css" />
-    <Content Include="Content\dx.material.orange.light.css" />
-    <Content Include="Content\dx.material.purple.dark.compact.css" />
-    <Content Include="Content\dx.material.purple.dark.css" />
-    <Content Include="Content\dx.material.purple.light.compact.css" />
-    <Content Include="Content\dx.material.purple.light.css" />
-    <Content Include="Content\dx.material.teal.dark.compact.css" />
-    <Content Include="Content\dx.material.teal.dark.css" />
-    <Content Include="Content\dx.material.teal.light.compact.css" />
-    <Content Include="Content\dx.material.teal.light.css" />
-    <Content Include="Content\dx.softblue.compact.css" />
-    <Content Include="Content\dx.softblue.css" />
     <Content Include="Content\favicon.ico" />
     <Content Include="Content\image\aos_logo.gif" />
     <Content Include="Content\image\aos_logo.jpg" />
@@ -3955,12 +3914,6 @@
     </Content>
     <Content Include="Scripts\aspnet\dx.aspnet.data.js" />
     <Content Include="Scripts\aspnet\dx.aspnet.mvc.js" />
-    <Content Include="Scripts\dx-quill.js" />
-    <Content Include="Scripts\dx-quill.min.js" />
-    <Content Include="Scripts\exceljs.js" />
-    <Content Include="Scripts\exceljs.min.js" />
-    <Content Include="Scripts\FileSaver.js" />
-    <Content Include="Scripts\FileSaver.min.js" />
     <Content Include="Scripts\haccp\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="aspnet_client\system_web\4_0_30319\crystalreportviewers13\crsmarttag.jsp" />
@@ -4117,24 +4070,6 @@
     </Content>
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
-    <Content Include="Content\fonts\Roboto-300.ttf" />
-    <Content Include="Content\fonts\Roboto-300.woff" />
-    <Content Include="Content\fonts\Roboto-300.woff2" />
-    <Content Include="Content\fonts\Roboto-400.ttf" />
-    <Content Include="Content\fonts\Roboto-400.woff" />
-    <Content Include="Content\fonts\Roboto-400.woff2" />
-    <Content Include="Content\fonts\Roboto-500.ttf" />
-    <Content Include="Content\fonts\Roboto-500.woff" />
-    <Content Include="Content\fonts\Roboto-500.woff2" />
-    <Content Include="Content\fonts\Roboto-700.ttf" />
-    <Content Include="Content\fonts\Roboto-700.woff" />
-    <Content Include="Content\fonts\Roboto-700.woff2" />
-    <Content Include="Content\icons\dxicons.ttf" />
-    <Content Include="Content\icons\dxicons.woff" />
-    <Content Include="Content\icons\dxicons.woff2" />
-    <Content Include="Content\icons\dxiconsmaterial.ttf" />
-    <Content Include="Content\icons\dxiconsmaterial.woff" />
-    <Content Include="Content\icons\dxiconsmaterial.woff2" />
     <None Include="Properties\PublishProfiles\IIS배포_OLD01.pubxml" />
     <None Include="Properties\PublishProfiles\IIS배포.pubxml" />
     <Content Include="Report\Rpt\AdvancedPlanning\APS_Work_Order_requestDB.xsc">
@@ -5032,10 +4967,6 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\jspdf.plugin.autotable.js" />
-    <Content Include="Scripts\jspdf.plugin.autotable.min.js" />
-    <Content Include="Scripts\jspdf.umd.js" />
-    <Content Include="Scripts\jspdf.umd.min.js" />
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
     <Content Include="Scripts\lib\jquery\changelog.txt" />
@@ -5062,7 +4993,6 @@
     <Content Include="Scripts\localization\dx.messages.sv.js" />
     <Content Include="Scripts\localization\dx.messages.tr.js" />
     <Content Include="Scripts\localization\dx.messages.vi.js" />
-    <Content Include="Scripts\localization\dx.messages.zh-tw.js" />
     <Content Include="Scripts\localization\dx.messages.zh.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\EmployeeReports\EmployeeReport.js" />
