--- a/RTEGMS_SYSTEM.ini
+++ b/RTEGMS_SYSTEM.ini
@@ -2,6 +2,7 @@
 ;dbAddress=106.249.231.138
 ;dbAddress=sf.tascorp.co.kr
 dbAddress=sf.tascorp.co.kr,1444
+;dbAddress=127.0.0.1
 dbId=VL8beHOCRrrgfMNJv4Re4A==
 dbPw=UL6Fh5zKurLmhb3qESaFlrlmvTjnX3AqYkRFhUpzwhQ=
 ;dbPw=i04fKNQF+jQrw2jk7bgzdqt+ibjklHAQ3z9TesW2gc4=
